# willow

./: .gitignore  README.md  pyproject.toml
scripts/: install.sh  setup.sh  smoke_e2e.py
src/willow/: __init__.py  agent.py  auth.py  cli.py  compaction.py  loop.py  message_history.py  models.py  permissions.py  provider_errors.py  request_preparation.py  runtime.py  session.py  skills.py  system_prompt.py  tui.py  turns.py
src/willow/providers/: __init__.py  anthropic.py  base.py  openai_codex.py  openai_completions.py  openai_responses.py  stub.py
src/willow/tools/: __init__.py  base.py  bash.py  edit.py  grep.py  monitor.py  read.py  write.py
src/willow/tools/utils/: __init__.py  output.py
tests/: test_agent.py  test_auth.py  test_bash_tool.py  test_cli.py  test_compaction.py  test_loop.py  test_message_history.py  test_monitor_tool.py  test_provider_anthropic.py  test_provider_errors.py  test_provider_openai_codex.py  test_provider_openai_completions.py  test_provider_openai_responses.py  test_runtime.py  test_session.py  test_skills.py  test_system_prompt.py  test_tools.py  test_tui.py  test_turns.py
